# learn-graphql

./: .env.sample  .gitignore  Cargo.toml  README.md  diesel.toml  learn-graphql.db
database/: connection.rs
database/migrations/2025-06-09-052551_initial_migrations/: up.sql
database/migrations/2025-06-09-063859_backfill_users/: up.sql
database/schema/: schema.rs
src/: main.rs
src/account/http/schema/: ping.rs
src/common/orm/: database.rs  user.rs
src/router/: graphql.rs
src/routes/: ping.rs
src/user/: mod.rs
src/user/adapter/: mod.rs
src/user/adapter/repository/: user.rs
src/user/adapter/uow/: internal.rs
src/user/domain/entity/: entity.rs
src/user/domain/interface/: interface.rs
src/user/graphql/: controller.rs
src/user/graphql/schema/: request.rs  response.rs
src/user/service/: service.rs
src/users/domain/entity/: entity.rs
